Add library imports and dataset loading cells

--- a/data_workflow.ipynb
+++ b/data_workflow.ipynb
@@ -4,15 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Housing Prices Data Analysis\n",
+    "# Airbnb NYC Rental Prices Analysis\n",
     "\n",
     "**Author:** David Graham\n",
     "\n",
-    "**Dataset:** Housing Prices Dataset\n",
+    "**Dataset:** Airbnb NYC 2019 Listings\n",
     "\n",
     "## Project Description\n",
     "\n",
-    "This project performs an exploratory data analysis on a housing prices dataset to uncover patterns and relationships between various property features and sale prices. Through data visualization and statistical analysis, we aim to identify key factors that influence housing values and discover meaningful insights within the real estate market data."
+    "This project performs an exploratory data analysis on the Airbnb NYC 2019 dataset to uncover patterns and relationships between listing features and rental prices. Through data visualization and statistical analysis, we aim to identify key factors that influence pricing and discover meaningful insights about the short-term rental market in New York City."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"AB_NYC_2019.csv\")\n",
+    "df.head()"
    ]
   }
  ],
