Add data cleaning functions with docstrings

--- a/data_workflow.ipynb
+++ b/data_workflow.ipynb
@@ -50,6 +50,55 @@
     "df = pd.read_csv(\"AB_NYC_2019.csv\")\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": "def handle_missing_values(dataframe, numeric_strategy='median', text_strategy='Unknown'):\n    \"\"\"\n    Handle missing values in a DataFrame by filling numeric columns with a \n    specified strategy and text columns with a placeholder value.\n    \n    Parameters:\n    -----------\n    dataframe : pd.DataFrame\n        The input DataFrame with missing values\n    numeric_strategy : str, default='median'\n        Strategy for filling numeric columns ('median', 'mean', or 'zero')\n    text_strategy : str, default='Unknown'\n        Value to fill missing text/object columns\n    \n    Returns:\n    --------\n    pd.DataFrame\n        DataFrame with missing values handled\n    \"\"\"\n    df_clean = dataframe.copy()\n    \n    for column in df_clean.columns:\n        if df_clean[column].isnull().sum() > 0:\n            if df_clean[column].dtype in ['float64', 'int64']:\n                if numeric_strategy == 'median':\n                    df_clean[column] = df_clean[column].fillna(df_clean[column].median())\n                elif numeric_strategy == 'mean':\n                    df_clean[column] = df_clean[column].fillna(df_clean[column].mean())\n                else:\n                    df_clean[column] = df_clean[column].fillna(0)\n            else:\n                df_clean[column] = df_clean[column].fillna(text_strategy)\n    \n    return df_clean\n\n\ndef remove_price_outliers(dataframe, price_column='price', lower_percentile=1, upper_percentile=99):\n    \"\"\"\n    Remove outliers from the price column based on percentile thresholds.\n    This helps eliminate extreme values that could skew analysis results.\n    \n    Parameters:\n    -----------\n    dataframe : pd.DataFrame\n        The input DataFrame containing price data\n    price_column : str, default='price'\n        Name of the column containing price values\n    lower_percentile : int, default=1\n        Lower percentile threshold (removes values below this)\n    upper_percentile : int, default=99\n        Upper percentile threshold (removes values above this)\n    \n    Returns:\n    --------\n    pd.DataFrame\n        DataFrame with price outliers removed\n    \"\"\"\n    df_clean = dataframe.copy()\n    \n    lower_bound = df_clean[price_column].quantile(lower_percentile / 100)\n    upper_bound = df_clean[price_column].quantile(upper_percentile / 100)\n    \n    original_count = len(df_clean)\n    df_clean = df_clean[(df_clean[price_column] >= lower_bound) & \n                        (df_clean[price_column] <= upper_bound)]\n    \n    removed_count = original_count - len(df_clean)\n    print(f\"Removed {removed_count} outliers ({removed_count/original_count*100:.2f}%)\")\n    print(f\"Price range: ${lower_bound:.0f} - ${upper_bound:.0f}\")\n    \n    return df_clean"
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apply Cleaning Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check missing values before cleaning\n",
+    "print(\"Missing values before cleaning:\")\n",
+    "print(df.isnull().sum())\n",
+    "print(f\"\\nTotal rows: {len(df)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply cleaning functions\n",
+    "df_clean = handle_missing_values(df)\n",
+    "df_clean = remove_price_outliers(df_clean)\n",
+    "\n",
+    "# Verify cleaning results\n",
+    "print(\"\\nMissing values after cleaning:\")\n",
+    "print(df_clean.isnull().sum())\n",
+    "print(f\"\\nFinal row count: {len(df_clean)}\")"
+   ]
   }
  ],
  "metadata": {
